--- a/Python Absolute Beginner/Module_2_1_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_2_1_Absolute_Beginner.ipynb
@@ -49,18 +49,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World! I am sending string arguments to print \n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello World!', 'I am sending string arguments to print ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hiroto Yamaguchi will be in the class for 17 year old students.\n"
+     ]
+    }
+   ],
    "source": [
     "student_age = 17\n",
     "student_name = \"Hiroto Yamaguchi\"\n",
@@ -69,9 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line 1\n",
+      "line 2\n",
+      "\n",
+      "line 4\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"line 1\")\n",
     "print(\"line 2\")\n",
@@ -94,22 +121,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hiroto Yamaguchi will be in the class for 17 year old students. 5 6 7 8\n"
+     ]
+    }
+   ],
    "source": [
     "#[ ] increase the number of arguments used in print() to 8 or more \n",
     "student_age = 17\n",
     "student_name = \"Hiroto Yamaguchi\"\n",
-    "print(student_name,'will be in the class for',student_age, 'year old students.')\n",
+    "print(student_name,'will be in the class for',student_age, 'year old students.', '5', '6', '7', 8)\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# &nbsp;\n",
     "<font size=\"6\" color=\"#00A0B2\"  face=\"verdana\"> <B>Concept</B></font>\n",
@@ -154,9 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -168,9 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -200,9 +233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello there!\n",
+      "goodbye\n",
+      "\n",
+      "33\n"
+     ]
+    }
+   ],
    "source": [
     "# Program defines and calls the say_hi & three_three functions\n",
     "# [ ] review and run the code\n",
@@ -239,12 +283,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HI!\n"
+     ]
+    }
+   ],
    "source": [
     "#[ ] define (def) a simple function called yell_it() and call the function\n",
-    "\n"
+    "def yell_it():\n",
+    "    phrase = \"hi\"\n",
+    "    print (phrase.upper() + '!')\n",
+    "\n",
+    "yell_it()"
    ]
   },
   {
@@ -292,9 +348,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "def say_this(phrase=\"Hi!\"):\n",
+    "    print(phrase)\n",
+    "    \n",
+    "say_this(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IT IS TIME TO SAVE THE NOTEBOOK!\n"
+     ]
+    }
+   ],
    "source": [
     "# yell_this() yells the string Argument provided\n",
     "def yell_this(phrase):\n",
@@ -306,9 +390,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi\n",
+      "Bye\n"
+     ]
+    }
+   ],
    "source": [
     "# use a default argument\n",
     "def say_this(phrase = \"Hi\"):  \n",
@@ -333,16 +426,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " This\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THIS!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] define yell_this() \n",
+    "def yell_this(phrase):\n",
+    "    print(phrase.upper() + \"!\")\n",
     "\n",
     "# [ ] get user input in variable words_to_yell\n",
-    "\n",
+    "words_to_yell = input()\n",
     "# [ ] call yell_this function with words_to_yell as argument\n",
-    "\n"
+    "yell_this(words_to_yell)\n"
    ]
   },
   {
@@ -370,9 +480,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
