--- a/Python Absolute Beginner/Module_2_Practice_1_IntroPy.ipynb
+++ b/Python Absolute Beginner/Module_2_Practice_1_IntroPy.ipynb
@@ -24,54 +24,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
     "# [ ] define and call a function short_rhyme() that prints a 2 line rhyme\n",
-    "\n"
+    "def short_rhyme ():\n",
+    "    print (\"There once was a man from Nantucket\")\n",
+    "    print (\"Who kept all his ears in a bucket\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
     "# [ ] define (def) a simple function: title_it() and call the function\n",
     "# - has a string parameter: msg\n",
     "# - prints msg in Title Case\n",
-    "\n"
+    "def title_it(msg):\n",
+    "    print (msg.title())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is the title? bucket\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bucket\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input with prompt \"what is the title?\" \n",
     "# [ ] call title_it() using input for the string argument\n",
-    "\n"
+    "title = input(\"What is the title?\")\n",
+    "title_it(title)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is the title? bucket\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bucket\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] define title_it_rtn() which returns a titled string instead of printing\n",
     "# [ ] call title_it_rtn() using input for the string argumetnt and print the result\n",
-    "\n"
+    "def title_it_rtn(msg):\n",
+    "    msg_cap = msg.title()\n",
+    "    return (msg_cap)\n",
+    "\n",
+    "print (title_it_rtn (input (\"What is the title?\")))\n"
    ]
   },
   {
@@ -90,14 +140,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is the book? bucket\n",
+      "What is the price of bucket? 12\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Title: Bucket, costs $12'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] create, call and test bookstore() function\n",
-    "\n"
+    "def bookstore(book, price):\n",
+    "    return(\"Title: \" + title_it_rtn(book) + \", costs $\" + price)\n",
+    "\n",
+    "book_entry = input (\"What is the book?\")\n",
+    "price_entry = input (\"What is the price of \" + book_entry + \"?\")\n",
+    "bookstore (book_entry, price_entry)\n"
    ]
   },
   {
@@ -109,17 +186,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a name:  Sam\n",
+      "enter a greeting:  Hi\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Sam!\n"
+     ]
+    }
+   ],
    "source": [
     "def make_greeting(name, greeting = \"Hello\"):\n",
     "    return (greeting + \" \" + name + \"!\")\n",
-    "\n",
-    "# get name and greeting, send to make_greeting \n",
-    "print(make_greeting(get_name(), get_greeting()))\n",
     "\n",
     "def get_name():\n",
     "    name_entry = input(\"enter a name: \")\n",
@@ -129,15 +222,13 @@
     "    greeting_entry = input(\"enter a greeting: \")\n",
     "    return greeting_entry\n",
     "\n",
-    "\n",
-    "\n"
+    "# get name and greeting, send to make_greeting \n",
+    "print(make_greeting(get_name(), get_greeting()))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "\n",
     "[Terms of use](http://go.microsoft.com/fwlink/?LinkID=206977) &nbsp; [Privacy & cookies](https://go.microsoft.com/fwlink/?LinkId=521839) &nbsp; © 2017 Microsoft"
@@ -161,9 +252,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
