--- a/Python Absolute Beginner/Module_2_2_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_2_2_Absolute_Beginner.ipynb
@@ -198,14 +198,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCHEDULE: [1st] Mathematics, [2nd] History\n"
+     ]
+    }
+   ],
    "source": [
     "def make_schedule(period1, period2):\n",
     "    schedule = (\"[1st] \" + period1.title() + \", [2nd] \" + period2.title())\n",
@@ -232,18 +240,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCHEDULE: [1st] Mathematics, [2nd] History, [3rd] Science\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] add a 3rd period parameter to make_schedule\n",
     "# [ ] Optional - print a schedule for 6 classes (Tip: perhaps let the function make this easy)\n",
-    "\n"
+    "\n",
+    "def make_schedule(period1, period2, period3):\n",
+    "    schedule = (\"[1st] \" + period1.title() + \", [2nd] \" + period2.title() + \", [3rd] \" + period3.title())\n",
+    "    return schedule\n",
+    "\n",
+    "student_schedule = make_schedule(\"mathematics\", \"history\", \"science\")\n",
+    "print(\"SCHEDULE:\", student_schedule)"
    ]
   },
   {
