--- a/Python Absolute Beginner/Module_2_3_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_2_3_Absolute_Beginner.ipynb
@@ -64,9 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hat_available' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-5edef9d565f5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# review and run code - note: fix error in the following \"tasks\" section\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mhave_hat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhat_available\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'green'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'hat available is'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhave_hat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'hat_available' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# review and run code - note: fix error in the following \"tasks\" section\n",
     "have_hat = hat_available('green')  \n",
@@ -91,20 +103,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hat available is True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] fix the sequence of the code to remove the NameError\n",
     "\n",
-    "have_hat = hat_available('green')  \n",
-    "  \n",
-    "print('hat available is', have_hat)\n",
+    "\n",
     "\n",
     "def hat_available(color):\n",
     "    hat_colors = 'black, red, blue, green, white, grey, brown, pink'\n",
     "    return(color.lower() in hat_colors)\n",
-    "\n"
+    "\n",
+    "have_hat = hat_available('green')  \n",
+    "  \n",
+    "print('hat available is', have_hat)"
    ]
   },
   {
@@ -142,25 +163,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What type of bird are you interested in? hawk\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Availability: True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create function bird_available\n",
-    "\n",
+    "def bird_available(species):\n",
+    "    bird_types = 'crow robin parrot eagle sandpiper hawk piegon'\n",
+    "    return (species in bird_types)\n",
     "# [ ] user input\n",
-    "\n",
+    "bird_wanted = input(\"What type of bird are you interested in?\")\n",
     "# [ ] call bird_available\n",
-    "\n",
+    "result = bird_available(bird_wanted)\n",
     "# [ ] print availbility status\n",
-    "\n"
+    "print (\"Availability:\", result)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# &nbsp;\n",
     "<font size=\"6\" color=\"#B24C00\"  face=\"verdana\"> <B>Task 3</B></font>\n",
@@ -169,12 +205,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter how many you want:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 will be ordered\n"
+     ]
+    }
+   ],
    "source": [
     "# define function how_many\n",
-    "how_many():\n",
+    "def how_many():\n",
     "    requested = input(\"enter how many you want: \")\n",
     "    return requested\n",
     "\n",
@@ -186,9 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "[Terms of use](http://go.microsoft.com/fwlink/?LinkID=206977) &nbsp; [Privacy & cookies](https://go.microsoft.com/fwlink/?LinkId=521839) &nbsp; © 2017 Microsoft"
    ]
@@ -211,9 +260,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
