--- a/Python Absolute Beginner/Module_2_Required_Code_IntroPy.ipynb
+++ b/Python Absolute Beginner/Module_2_Required_Code_IntroPy.ipynb
@@ -1,67 +1,83 @@
 {
-  "cells": [
-    {
-      "metadata": {
-        "collapsed": true
-      },
-      "cell_type": "markdown",
-      "source": [
-        "#  Module 2 Required Coding Activity  \n",
-        "Introduction to Python Unit 1  \n",
-        "\n",
-        "This is an activity based on code similar to the Jupyter Notebook **`Practice_MOD02_1-3_IntroPy.ipynb`** which you may have completed.\n",
-        "\n",
-        "| Some Assignment Requirements |  \n",
-        "|:-------------------------------|  \n",
-        "| **NOTE:** This program requires a **function** be defined, created and called. The call will send values based on user input.  The function call must capture a `return` value that is used in print output.  The function will have parameters and `return` a string and should otherwise use code syntax covered in module 2.  |  \n",
-        " \n",
-        "## Program: fishstore()\n",
-        "create and test fishstore()\n",
-        "- **fishstore() takes 2 string arguments: fish & price**\n",
-        "- **fishstore returns a string in sentence form**  \n",
-        "- **gather input for fish_entry and price_entry to use in calling fishstore()**\n",
-        "- **print the return value of fishstore()**\n",
-        ">example of output: **`Fish Type: Guppy costs $1`**"
-      ]
-    },
-    {
-      "metadata": {
-        "trusted": false
-      },
-      "cell_type": "code",
-      "source": [
-        "# [ ] create, call and test fishstore() function \n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {},
-      "cell_type": "markdown",
-      "source": [
-        "Submit this by creating a python file (.py) and submitting it in D2L. Be sure to test that it works."
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3",
-      "language": "python"
-    },
-    "language_info": {
-      "mimetype": "text/x-python",
-      "nbconvert_exporter": "python",
-      "name": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.5.4",
-      "file_extension": ".py",
-      "codemirror_mode": {
-        "version": 3,
-        "name": "ipython"
-      }
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Module 2 Required Coding Activity  \n",
+    "Introduction to Python Unit 1  \n",
+    "\n",
+    "This is an activity based on code similar to the Jupyter Notebook **`Practice_MOD02_1-3_IntroPy.ipynb`** which you may have completed.\n",
+    "\n",
+    "| Some Assignment Requirements |  \n",
+    "|:-------------------------------|  \n",
+    "| **NOTE:** This program requires a **function** be defined, created and called. The call will send values based on user input.  The function call must capture a `return` value that is used in print output.  The function will have parameters and `return` a string and should otherwise use code syntax covered in module 2.  |  \n",
+    " \n",
+    "## Program: fishstore()\n",
+    "create and test fishstore()\n",
+    "- **fishstore() takes 2 string arguments: fish & price**\n",
+    "- **fishstore returns a string in sentence form**  \n",
+    "- **gather input for fish_entry and price_entry to use in calling fishstore()**\n",
+    "- **print the return value of fishstore()**\n",
+    ">example of output: **`Fish Type: Guppy costs $1`**"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 1
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What type of fish? Halibut\n",
+      "How much does it cost? 234.21\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fish Type: Halibut costs $234.21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [ ] create, call and test fishstore() function \n",
+    "def fishstore (fish, price):\n",
+    "    return (\"Fish Type: \" + fish + \" costs $\" + price)\n",
+    "\n",
+    "print (fishstore (input(\"What type of fish?\"), input (\"How much does it cost?\")))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Submit this by creating a python file (.py) and submitting it in D2L. Be sure to test that it works."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
