--- a/Python Absolute Beginner/Module_2_Required_Code_IntroPy.ipynb
+++ b/Python Absolute Beginner/Module_2_Required_Code_IntroPy.ipynb
@@ -24,22 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "What type of fish? Halibut\n",
-      "How much does it cost? 234.21\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fish Type: Halibut costs $234.21\n"
+      "What type of fish?Perch\n",
+      "How much does it cost?5.55\n",
+      "Fish Type: Perch costs $5.55\n"
      ]
     }
    ],
