--- a/Python Absolute Beginner/Module_3_1_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_3_1_Absolute_Beginner.ipynb
@@ -44,11 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True means do something\n"
+     ]
+    }
+   ],
    "source": [
     "if True:\n",
     "    print(\"True means do something\")\n",
@@ -58,11 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enjoy some hot tea!\n"
+     ]
+    }
+   ],
    "source": [
     "hot_tea = True\n",
     "\n",
@@ -74,10 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "someone_i_know = False\n",
@@ -90,11 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how have you been?\n"
+     ]
+    }
+   ],
    "source": [
     "# changed the value of someone_i_know\n",
     "someone_i_know = True\n",
@@ -121,28 +137,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's sunny today!\n"
+     ]
+    }
+   ],
    "source": [
     "sunny_today = True\n",
     "# [ ] test if it is sunny_today and give proper responses using if and else\n",
-    "\n"
+    "if sunny_today:\n",
+    "    print (\"It's sunny today!\")\n",
+    "    \n",
+    "else:\n",
+    "    print (\"It's not sunny today!\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's not sunny today!\n"
+     ]
+    }
+   ],
    "source": [
     "sunny_today = False\n",
     "# [ ] use code you created above and test sunny_today = False\n",
-    "\n"
+    "if sunny_today:\n",
+    "    print (\"It's sunny today!\")\n",
+    "    \n",
+    "else:\n",
+    "    print (\"It's not sunny today!\")\n"
    ]
   },
   {
@@ -173,11 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the title of a favorite book: The Astronaught\n",
+      "The Astronaught - nice capitalization in that title!\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "favorite_book = input(\"Enter the title of a favorite book: \")\n",
@@ -190,11 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a positive integer number: 3\n",
+      "3 is a positive integer\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "a_number = input(\"enter a positive integer number: \")\n",
@@ -213,11 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"enter a type of vehicle that starts with \"P\": Prius\n",
+      "Prius starts with \"P\"\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "vehicle_type = input('\"enter a type of vehicle that starts with \"P\": ')\n",
@@ -244,16 +301,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At least one is not lower\n"
+     ]
+    }
+   ],
    "source": [
     "test_string_1 = \"welcome\"\n",
     "test_string_2 = \"I have $3\"\n",
     "# [ ] use if, else to test for islower() for the 2 strings\n",
-    "\n"
+    "\n",
+    "if (test_string_1.islower() and test_string_2.islower()):\n",
+    "     print (\"Both are lower\")\n",
+    "else:\n",
+    "    print (\"At least one is not lower\")"
    ]
   },
   {
@@ -268,19 +335,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The string 'welcome' starts with a 'w'\n",
+      "The string 'I have $3' does not start with a 'w'\n",
+      "The string 'With a function it's efficient to repeat code' does not start with a 'w'\n"
+     ]
+    }
+   ],
    "source": [
     "test_string_1 = \"welcome\"\n",
     "test_string_2 = \"I have $3\"\n",
     "test_string_3 = \"With a function it's efficient to repeat code\"\n",
     "# [ ] create a function w_start_test() use if & else to test with startswith('w')\n",
+    "def w_start_test (test_string):\n",
+    "    if test_string.startswith('w'):\n",
+    "        print (\"The string '\" + test_string + \"' starts with a 'w'\")\n",
+    "    else:\n",
+    "        print (\"The string '\" + test_string + \"' does not start with a 'w'\")\n",
     "\n",
     "# [ ] Test the 3 string variables provided by calling w_start_test()\n",
-    "\n"
+    "w_start_test(test_string_1)\n",
+    "w_start_test(test_string_2)\n",
+    "w_start_test(test_string_3)\n"
    ]
   },
   {
@@ -308,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
