--- a/Python Absolute Beginner/Module_3_4_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_3_4_Absolute_Beginner.ipynb
@@ -56,11 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter weather (sunny, rainy, snowy): sunny\n",
+      "Wear a t-shirt\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review the code then run testing different inputs\n",
     "# WHAT TO WEAR\n",
@@ -78,11 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a guess for the secret number (1-3): 2\n",
+      "Guess is right\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review the code then run testing different inputs\n",
     "# SECRET NUMBER GUESS\n",
@@ -119,14 +133,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What size shirt do you wear? (S, M, L)L\n",
+      "Large shirts are $8\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] code and test SHIRT SALE\n",
-    "\n"
+    "\n",
+    "size = input (\"What size shirt do you wear? (S, M, L)\")\n",
+    "\n",
+    "if size == \"S\":\n",
+    "    print (\"Small shirts are $6\")\n",
+    "elif size == \"M\":\n",
+    "    print (\"Medium shirts are $7\")\n",
+    "elif size == \"L\":\n",
+    "    print (\"Large shirts are $8\")\n",
+    "else:\n",
+    "    print (\"Invalid size.\")"
    ]
   },
   {
@@ -155,11 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "230\n"
+     ]
+    }
+   ],
    "source": [
     "weight1 = '60' # a string\n",
     "weight2 = 170 # an integer\n",
@@ -179,32 +216,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
    "source": [
     "str_num_1 = \"11\"\n",
     "str_num_2 = \"15\"\n",
     "int_num_3 = 10\n",
     "# [ ] Add the 3 numbers as integers and print the result\n",
-    "\n"
+    "print (int(str_num_1) + int(str_num_2) + int_num_3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111510\n"
+     ]
+    }
+   ],
    "source": [
     "str_num_1 = \"11\"\n",
     "str_num_2 = \"15\"\n",
     "int_num_3 = 10\n",
     "# [ ] Add the 3 numbers as test strings and print the result\n",
-    "\n"
+    "\n",
+    "print (str_num_1 + str_num_2 + str(int_num_3))\n"
    ]
   },
   {
@@ -221,11 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] code and test: adding using int casting\n",
     "str_integer = \"2\"\n",
@@ -253,11 +309,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter student age (integer): 32\n",
+      "Next year student will be 33\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run code\n",
     "student_age = input('enter student age (integer): ')\n",
@@ -267,11 +330,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter student age (integer): 44\n",
+      "In a decade the student will be 54\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run code\n",
     "# cast to int at input\n",
@@ -300,14 +370,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number:12\n",
+      "Enter a second number:23\n",
+      "The sum of the two numbers is 35\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] code and test the adding calculator\n",
-    "\n"
+    "\n",
+    "num_1 = input (\"Enter a number:\")\n",
+    "num_2 = input (\"Enter a second number:\")\n",
+    "print (\"The sum of the two numbers is\", int(num_1) + int(num_2))"
    ]
   },
   {
@@ -321,7 +402,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -335,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
