--- a/Python Absolute Beginner/Module_3_5_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_3_5_Absolute_Beginner.ipynb
@@ -46,11 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 + 5 = 8\n",
+      "3 + 5 - 9 = -1\n",
+      "48/9 = 5.333333333333333\n",
+      "5*5 = 25\n",
+      "(14 - 8)*(19/4) = 28.5\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "print(\"3 + 5 =\",3 + 5)\n",
@@ -62,11 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a non-decimal number you wish were bigger: 5\n",
+      "Now you have 5000000\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - 'million_maker'\n",
     "def million_maker():\n",
@@ -87,74 +104,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of subtracting 15 from 43\n",
-    "\n"
+    "\n",
+    "print (43 - 15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "645\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of multiplying 15 and 43\n",
-    "\n"
+    "\n",
+    "print (15*43)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.0\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of dividing 156 by 12\n",
-    "\n"
+    "print (156/12)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.0\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of dividing 21 by 0.5\n",
-    "\n"
+    "\n",
+    "print (21/0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of adding 111 plus 84 and then subtracting 45\n",
-    "\n"
+    "\n",
+    "print (111+84-45)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of adding 21 and 4 and then multiplying that sum by 4\n",
-    "\n"
+    "\n",
+    "print ((21+4)*4)"
    ]
   },
   {
@@ -178,14 +236,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a whole number:23\n",
+      "Enter a second whole number:34\n",
+      "782 is a string\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and test multiply() function\n",
-    "\n"
+    "def multiply():\n",
+    "    num_1 = input (\"Enter a whole number:\")\n",
+    "    num_2 = input (\"Enter a second whole number:\")\n",
+    "    return (str(int(num_1)*int(num_2)))\n",
+    "    \n",
+    "\n",
+    "print(multiply() + \" is a string\")"
    ]
   },
   {
@@ -207,13 +279,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Would you like to multiply (m) or divide (d)?d\n",
+      "Enter a whole number:3\n",
+      "Enter a second whole number:1\n",
+      "3.0\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create improved multiply() function and test with /, no argument, and an invalid operator ($)\n",
+    "def multiply(operator = \"*\"):\n",
+    "    num_1 = input (\"Enter a whole number:\")\n",
+    "    num_2 = input (\"Enter a second whole number:\")\n",
+    "    \n",
+    "    if operator == \"*\":\n",
+    "        return (str(int(num_1)*int(num_2)))\n",
+    "    elif operator ==\"/\":\n",
+    "        return (str(int(num_1)/int(num_2)))\n",
+    "    else:\n",
+    "        print (\"Corruption occurred\")\n",
+    "    \n",
+    "\n",
+    "ops = input(\"Would you like to multiply (m) or divide (d)?\" )\n",
+    "\n",
+    "if ops == \"m\":\n",
+    "    print (multiply (\"*\"))\n",
+    "elif ops == \"d\":\n",
+    "    print (multiply (\"/\"))\n",
+    "else:\n",
+    "    print (\"Invalid operator\")\n",
     "\n",
     "\n"
    ]
@@ -229,17 +330,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter name: frank\n",
+      "Frank Congratulations, names starting with 'F' get to go first today!\n"
+     ]
+    }
+   ],
    "source": [
     "# Review, run, fix \n",
     "student_name = input(\"enter name: \").capitalize()\n",
     "if student_name.startswith(\"F\"):\n",
     "    print(student_name,\"Congratulations, names starting with 'F' get to go first today!\")\n",
-    "elif student_name.startswith(\"G\")\n",
+    "elif student_name.startswith(\"G\"):\n",
     "    print(student_name,\"Congratulations, names starting with 'G' get to go second today!\")\n",
     "else:\n",
     "    print(student_name, \"please wait for students with names staring with 'F' and 'G' to go first today.\")\n",
@@ -273,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
