--- a/Python Absolute Beginner/Module_3_2_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_3_2_Absolute_Beginner.ipynb
@@ -48,11 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run code to see if 3 greater than 5\n",
     "3 > 5"
@@ -60,11 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run code to see if 3 less than or equal to 5\n",
     "3 <= 5"
@@ -72,11 +90,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run code \n",
     "\n",
@@ -89,11 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x not equal 9 is True\n",
+      "x equal 3 is True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run code \n",
     "x = 3\n",
@@ -114,41 +148,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 13 is True\n"
+     ]
+    }
+   ],
    "source": [
     "x = 9 + 4\n",
     "# [ ] create a test to print() True or False for x is equal to 13\n",
-    "\n"
+    "\n",
+    "print(\"x = 13 is\", x == 13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is 3 + 3 greater than 2 + 4: False\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create a test to print True or False for 3 + 3 is greater than 2 + 4\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# &nbsp;\n",
-    "<font size=\"6\" color=\"#00A0B2\"  face=\"verdana\"> <B>Concepts</B></font>  \n",
     "\n",
-    "## Conditionals: comparison operators with `if`\n",
-    "[![view video](https://iajupyterprodblobs.blob.core.windows.net/imagecontainer/common/play_video.png)]( http://edxinteractivepage.blob.core.windows.net/edxpages/f7cff1a7-5601-48a1-95a6-fd1fdfabd20e.html?details=[{\"src\":\"http://jupyternootbookwams.streaming.mediaservices.windows.net/15e3b015-e83b-4ab8-8375-b11e52a348ea/Unit1_Section4.2-conditional-if.ism/manifest\",\"type\":\"application/vnd.ms-sstr+xml\"}],[{\"src\":\"http://jupyternootbookwams.streaming.mediaservices.windows.net/15e3b015-e83b-4ab8-8375-b11e52a348ea/Unit1_Section4.2-conditional-if.vtt\",\"srclang\":\"en\",\"kind\":\"subtitles\",\"label\":\"english\"}])\n",
-    "Comparison operators evaluate to Boolean **`True`** and **`False`** to direct the flow of **`if`** conditionals"
+    "print(\"Is 3 + 3 greater than 2 + 4:\", (3 + 3) > (2 + 4))"
    ]
   },
   {
@@ -161,11 +195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x was 21\n",
+      "now x is 25\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "x = 21\n",
@@ -179,11 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass: x + 18 is equal to 36\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "x = 18\n",
@@ -195,11 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is 18\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell. \"!\" means \"not\"\n",
     "x = 18\n",
@@ -212,11 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-6c5a70cc1128>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-15-6c5a70cc1128>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    if x = 2:\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "# DON'T ASSIGN (x = 2) when you mean to COMPARE (x == 2)\n",
@@ -241,17 +301,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y greater than or equal x + x is True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create an if/else statement that tests if y is greater than or equal x + x \n",
     "# [ ] print output: \"y greater than or equal x + x is\" True/False ...or a similar output\n",
     "x = 3\n",
     "y = x + 8\n",
-    "\n"
+    "\n",
+    "if (y >= (x + x)):\n",
+    "    print (\"y greater than or equal x + x is True\" )\n",
+    "else:\n",
+    "    print (\"y greater than or equal x + x is False\" )"
    ]
   },
   {
@@ -279,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
