--- a/Python Absolute Beginner/Module_3_3_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_3_3_Absolute_Beginner.ipynb
@@ -43,11 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# review and run code\n",
     "\"hello\" < \"Hello\""
@@ -55,11 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# review and run code\n",
     "\"Aardvark\" > \"Zebra\""
@@ -67,11 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# review and run code\n",
     "'student' != 'Student'"
@@ -79,11 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'student' >= 'Student' is True\n",
+      "'student' != 'Student' is True\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code\n",
     "print(\"'student' >= 'Student' is\", 'student' >= 'Student')\n",
@@ -92,11 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# review and run code\n",
     "\"Hello \" + \"World!\" == \"Hello World!\""
@@ -113,30 +156,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "msg = \"Hello\"\n",
     "# [ ] print the True/False results of testing if msg string equals \"Hello\" string\n",
-    "\n"
+    "\n",
+    "print (msg == \"Hello\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Say \"Hello\"Hello\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "greeting = \"Hello\"\n",
     "# [ ] get input for variable named msg, and ask user to 'Say \"Hello\"'\n",
     "# [ ] print the results of testing if msg string equals greeting string\n",
     "\n",
-    "\n"
+    "msg = input ('Say \"Hello\"')\n",
+    "\n",
+    "print (msg == greeting)\n"
    ]
   },
   {
@@ -159,11 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "message as expected\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run code\n",
     "msg = \"Save the notebook\"\n",
@@ -176,11 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "message as expected\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run code\n",
     "msg = \"Save the notebook\"\n",
@@ -203,16 +274,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is 8 + 13? :21\n",
+      "Correct!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get input for a variable, answer, and ask user 'What is 8 + 13? : '\n",
     "# [ ] print messages for correct answer \"21\" or incorrect answer using if/else\n",
     "# note: input returns a \"string\"\n",
-    "\n"
+    "answer = input (\"What is 8 + 13? :\")\n",
+    "\n",
+    "if (answer == \"21\"):\n",
+    "    print (\"Correct!\")\n",
+    "else:\n",
+    "    print (\"Incorrect!\")"
    ]
   },
   {
@@ -240,14 +323,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is the sky blue? (True or False):False\n",
+      "Incorrect\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the program, run tests\n",
-    "\n"
+    "\n",
+    "def tf_quiz (question, correct_ans):\n",
+    "    if (correct_ans == \"T\"):\n",
+    "        return (\"Correct!\")\n",
+    "    else:\n",
+    "        return (\"Incorrect\")\n",
+    "    \n",
+    "quest = \"Is the sky blue? (True or False):\"   \n",
+    "answer = input (quest)\n",
+    "\n",
+    "if answer == \"True\":\n",
+    "    print (tf_quiz (quest, \"T\"))\n",
+    "else:\n",
+    "    print (tf_quiz (quest, \"F\"))\n",
+    "    \n"
    ]
   },
   {
@@ -275,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
