--- a/Python Absolute Beginner/Module_3_Practice_1_IntroPy.ipynb
+++ b/Python Absolute Beginner/Module_3_Practice_1_IntroPy.ipynb
@@ -22,34 +22,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an Age:11\n",
+      "It's good to be 11\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] input avariable: age as digit and cast to int\n",
     "# if age greater than or equal to 12 then print message on age in 10 years \n",
     "# or else print message \"It is good to be\" age\n",
     "\n",
-    "\n",
+    "age = int(input(\"Enter an Age:\"))\n",
+    "          \n",
+    "if (age >= 12):\n",
+    "    print (\"In 10 years, this person will be \", (age+10))\n",
+    "else:\n",
+    "    print (\"It's good to be\", age)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 1000\n",
+      "The number entered is greater than 100?: True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] input a number \n",
     "# if number IS a digit string then cast to int\n",
     "# print number \"greater than 100 is\" True/False\n",
     "# if number is NOT a digit string then message the user that \"only int is accepted\"\n",
     "\n",
+    "num = input (\"Enter a number: \")\n",
+    "\n",
+    "if num.isnumeric():\n",
+    "    print (\"The number entered is greater than 100?:\", int(num) > 100)\n",
+    "else:\n",
+    "    print (\"Invalid Entry\")\n",
     "\n"
    ]
   },
@@ -66,28 +91,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] create check_guess()\n",
     "# call with test\n",
+    "# answer = input(\"Enter a number: \")\n",
+    "# guess = input(\"Enter a guess:\")\n",
+    "\n",
+    "def check_guess(ans, gue):\n",
+    "    if gue.isalnum() == False:\n",
+    "        print (\"Invalid Guess\")\n",
+    "        return (False)\n",
+    "    elif gue == ans:\n",
+    "        print (\"Correct!\")\n",
+    "        return (True)\n",
+    "    elif gue > ans:\n",
+    "        print (\"High\")\n",
+    "        return (False)\n",
+    "    elif gue < ans:\n",
+    "        print (\"Low\")\n",
+    "        return (False)\n",
+    "    \n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number:f\n",
+      "Enter a guess F\n",
+      "Low\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] call check_guess with user input\n",
-    "\n"
+    "check_guess (input(\"Enter a number:\"), input(\"Enter a guess \"))\n"
    ]
   },
   {
@@ -106,15 +164,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your first guess:1214134\n",
+      "Low\n",
+      "Enter your second guess:3\n",
+      "Low\n",
+      "Enter your third guess:\n",
+      "Invalid Guess\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] create letter_guess() function, call the function to test\n",
     "\n",
-    "\n"
+    "def letter_guess(ans = \"5\"):\n",
+    "    if check_guess(ans, input(\"Enter your first guess:\")):\n",
+    "        return (True)\n",
+    "    elif check_guess(ans, input(\"Enter your second guess:\")):\n",
+    "        return (True)\n",
+    "    elif check_guess(ans, input(\"Enter your third guess:\")):\n",
+    "        return (True)\n",
+    "    else:\n",
+    "        return (False)\n",
+    "    \n",
+    "letter_guess(\"4\")\n"
    ]
   },
   {
@@ -134,14 +223,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Give me a sentence about a pet. :My hamster is silly\n",
+      "Thanks for the story\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete pet conversation\n",
-    "\n"
+    "about_pet = input(\"Give me a sentence about a pet. :\")\n",
+    "\n",
+    "if \"dog\" in about_pet:\n",
+    "    print (\"Ah, a dog.\")\n",
+    "elif \"cat\" in about_pet:\n",
+    "    print (\"Good Kitty!\")\n",
+    "elif \"fish\" in about_pet:\n",
+    "    print (\"Pudge controls the weather!\")\n",
+    "\n",
+    "    \n",
+    "print (\"Thanks for the story\")\n"
    ]
   },
   {
@@ -171,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
