--- a/Python Absolute Beginner/Module_3_Required_Code_IntroPy.ipynb
+++ b/Python Absolute Beginner/Module_3_Required_Code_IntroPy.ipynb
@@ -1,86 +1,105 @@
 {
-  "cells": [
-    {
-      "metadata": {
-        "collapsed": true
-      },
-      "cell_type": "markdown",
-      "source": [
-        "#  Module 3 Required Coding Activity  \n",
-        "Introduction to Python Unit 1 \n",
-        "\n",
-        "This is an activity based on code similar to the Jupyter Notebook **`Practice_MOD03_1-4_IntroPy.ipynb`** and **`Practice_MOD03_1-5_IntroPy.ipynb`** which you may have completed as practice.\n",
-        "\n",
-        "> **NOTE:** This program requires the use of **`if, elif, else`**, and casting between strings and numbers. The program should use the various code syntax covered in module 3.  \n",
-        ">  \n",
-        ">The program must result in print output using numeric input similar to that shown in the sample below.\n",
-        "\n",
-        "## Program: Cheese Order    \n",
-        "\n",
-        "- set values for maximum and minimum order variables  \n",
-        "- set value for price variable\n",
-        "- get order_amount input and cast to a number  \n",
-        "- check order_amount and give message checking against  \n",
-        "  - over maximum\n",
-        "  - under minimum\n",
-        "- else within maximum and minimum give message with calculated price \n",
-        "\n",
-        "\n",
-        "Sample input and output:\n",
-        "```\n",
-        "Enter cheese order weight (numeric value): 113\n",
-        "113.0 is more than currently available stock\n",
-        "```\n",
-        "\n",
-        "```\n",
-        "Enter cheese order weight (numeric value): .15\n",
-        "0.15 is below minimum order amount\n",
-        "```  \n",
-        "\n",
-        "```\n",
-        "Enter cheese order weight (numeric value): 2\n",
-        "2.0 costs $15.98\n",
-        "```  "
-      ]
-    },
-    {
-      "metadata": {
-        "trusted": false
-      },
-      "cell_type": "code",
-      "source": [
-        "# [ ] create, call and test \n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {},
-      "cell_type": "markdown",
-      "source": [
-        "Submit this by creating a python file (.py) and submitting it in D2L. Be sure to test that it works."
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3",
-      "language": "python"
-    },
-    "language_info": {
-      "mimetype": "text/x-python",
-      "nbconvert_exporter": "python",
-      "name": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.5.4",
-      "file_extension": ".py",
-      "codemirror_mode": {
-        "version": 3,
-        "name": "ipython"
-      }
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#  Module 3 Required Coding Activity  \n",
+    "Introduction to Python Unit 1 \n",
+    "\n",
+    "This is an activity based on code similar to the Jupyter Notebook **`Practice_MOD03_1-4_IntroPy.ipynb`** and **`Practice_MOD03_1-5_IntroPy.ipynb`** which you may have completed as practice.\n",
+    "\n",
+    "> **NOTE:** This program requires the use of **`if, elif, else`**, and casting between strings and numbers. The program should use the various code syntax covered in module 3.  \n",
+    ">  \n",
+    ">The program must result in print output using numeric input similar to that shown in the sample below.\n",
+    "\n",
+    "## Program: Cheese Order    \n",
+    "\n",
+    "- set values for maximum and minimum order variables  \n",
+    "- set value for price variable\n",
+    "- get order_amount input and cast to a number  \n",
+    "- check order_amount and give message checking against  \n",
+    "  - over maximum\n",
+    "  - under minimum\n",
+    "- else within maximum and minimum give message with calculated price \n",
+    "\n",
+    "\n",
+    "Sample input and output:\n",
+    "```\n",
+    "Enter cheese order weight (numeric value): 113\n",
+    "113.0 is more than currently available stock\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "Enter cheese order weight (numeric value): .15\n",
+    "0.15 is below minimum order amount\n",
+    "```  \n",
+    "\n",
+    "```\n",
+    "Enter cheese order weight (numeric value): 2\n",
+    "2.0 costs $15.98\n",
+    "```  "
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 1
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How much would you like to order?32\n",
+      "32.0 costs $ 184.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [ ] create, call and test \n",
+    "max_order = 200.00\n",
+    "min_order = 2.00\n",
+    "price = 5.75\n",
+    "\n",
+    "order_amt = float(input(\"How much would you like to order?\"))\n",
+    "\n",
+    "if order_amt > max_order:\n",
+    "    print (order_amt, \"exceeds available stock only\", max_order, \"available\")\n",
+    "elif order_amt < min_order:\n",
+    "    print (order_amt, \"is below the minimum order threshold of\", min_order)\n",
+    "else:\n",
+    "    print (order_amt, \"costs $\", order_amt*price)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Submit this by creating a python file (.py) and submitting it in D2L. Be sure to test that it works."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
