--- a/Python Absolute Beginner/Module_4_4_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_4_4_Absolute_Beginner.ipynb
@@ -47,9 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 !\n",
+      "4 !\n",
+      "3 !\n",
+      "2 !\n",
+      "1 !\n",
+      "\n",
+      "IGNITION!\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run GREET COUNT\n",
     "greet_count = 5\n",
@@ -82,12 +96,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name an animal or 'exit' to exit: dog\n",
+      "Name an animal or 'exit' to exit: cat\n",
+      "Name an animal or 'exit' to exit: mutt\n",
+      "Name an animal or 'exit' to exit: exit\n",
+      "\n",
+      "Here is a list of all 3 entered: \n",
+      " dog\n",
+      " cat\n",
+      " mutt\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the Animal Names program, run tests\n",
-    "\n"
+    "animals = 0\n",
+    "num_animals = 0\n",
+    "a_name = \"\"\n",
+    "all_animals = \"\"\n",
+    "\n",
+    "while animals < 4:\n",
+    "    a_name = input (\"Name an animal or 'exit' to exit: \")\n",
+    "        \n",
+    "    if a_name.lower() == \"exit\":\n",
+    "        break\n",
+    "    else:\n",
+    "        all_animals = all_animals + \"\\n \" + a_name\n",
+    "        num_animals += 1\n",
+    "            \n",
+    "if all_animals == \"\":\n",
+    "    print (\"No Animals\")\n",
+    "else:\n",
+    "    print (\"\\nHere is a list of all\", num_animals, \"animals entered:\", all_animals)\n",
+    "    \n",
+    "\n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -114,9 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter student's first (Letters only, No spaces): sam di\n",
+      "enter student's first (Letters only, No spaces): 231\n",
+      "enter student's first (Letters only, No spaces): sam\n",
+      "\n",
+      "Sam has been entered as first name\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run example that loops until a valid first name format is entered\n",
     "student_fname = \"\"\n",
@@ -149,12 +212,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter some digits: 3\n",
+      "Enter some digits: 4\n",
+      "Enter some digits: 2\n",
+      "Enter some digits: 922\n",
+      "Enter some digits: 3242\n",
+      "Enter some digits: 2423\n",
+      "Enter some digits: d\n",
+      "34292232422423\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the program, run tests\n",
-    "\n"
+    "\n",
+    "int_num = input (\"Enter some digits: \")\n",
+    "long_num = \"\"\n",
+    "\n",
+    "while int_num.isnumeric():\n",
+    "    long_num = long_num + int_num\n",
+    "    int_num = input (\"Enter some digits: \")\n",
+    "    \n",
+    "print (long_num)"
    ]
   },
   {
@@ -170,15 +256,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 x 1 = 1\n",
+      "2 x 2 = 4\n",
+      "3 x 3 = 9\n",
+      "4 x 4 = 16\n",
+      "5 x 5 = 25\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review the code, run, fix the Logic error\n",
     "count = 1\n",
     "\n",
     "# loop 5 times\n",
-    "while count > 6:\n",
+    "while count < 6:\n",
     "    print(count, \"x\", count, \"=\", count*count)\n",
     "    count +=1\n",
     "    \n"
@@ -209,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
