--- a/Python Absolute Beginner/Module_4_1_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_4_1_Absolute_Beginner.ipynb
@@ -53,11 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"c\" for Cheese or \"v\" for Veggie Special: c\n",
+      "\"c\" for Cheddar or \"m\" for Manchego: m\n",
+      "Here is your Manchego Cheese sandwich\n"
+     ]
+    }
+   ],
    "source": [
     "# simplified example\n",
     "# [ ] review the code then run and following the flowchart paths\n",
@@ -81,11 +89,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, welcome to the sandwich shop.  Please select a sandwich.\n",
+      "\"c\" for Cheese or \"v\" for Veggie Special: v\n",
+      "\n",
+      "Here is your Veggie Special. Thank you.\n",
+      "\n",
+      "Goodbye!\n"
+     ]
+    }
+   ],
    "source": [
     "# full example: handling some invalid input and elif statement\n",
     "# [ ] review the code then run following the flowchart paths including **invalid responses** like \"xyz123\"\n",
@@ -137,9 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] Say \"Hello\" with nested if\n",
@@ -167,14 +186,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of a bird: robin\n",
+      "Correct\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the \"Guess the bird\" program \n",
-    "\n"
+    "birds = \"blue jay\", \"robin\", \"eagle\"\n",
+    "\n",
+    "guess = input (\"Enter the name of a bird: \")\n",
+    "\n",
+    "if guess in birds:\n",
+    "    print (\"Correct\")\n",
+    "else:\n",
+    "    guess = input (\"Enter the name of a bird: \")\n",
+    "    if guess in birds:\n",
+    "        print (\"Correct\")\n",
+    "    else:\n",
+    "        guess = input (\"Enter the name of a bird: \")\n",
+    "        if guess in birds:\n",
+    "            print (\"Correct\")\n",
+    "        else:\n",
+    "            print (\"Three strikes you're out.\")\n",
+    "        \n"
    ]
   },
   {
@@ -202,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
